--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Featured</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../style.css">
     <link rel="icon" type="image/x-icon" href="../Asset/Images/Tittle logo.png">
 
 </head>
 <body>
     <nav class="navbar">
-        <div class="logo"><a href="../Featured.html">Sridharan</a></div>
+        <div class="logo"><a href="../index.html">Sridharan</a></div>
         
         <ul class="nav-links" id="navLinks">
             <li><a href="../Index/Index.html">Index</a></li>
-            <li><a href="../Featured.html">Featured</a></li>
+            <li><a href="../index.html">Featured</a></li>
             <li><a href="../About/About.html">About</a></li>
         </ul>
         
