--- a/Index/Marketing Collateral.html
+++ b/Index/Marketing Collateral.html
@@ -14,10 +14,10 @@
 <body>
     <!-- (Nav bar Start) -->
     <nav class="navbar sticky">
-        <div class="logo"><a href="../Featured.html">Sridharan</a></div>
+        <div class="logo"><a href="../index.html">Sridharan</a></div>
         <ul class="nav-links" id="navLinks">
             <li><a href="../Index/Index.html">Index</a></li>
-            <li><a href="../Featured.html">Featured</a></li>
+            <li><a href="../index.html">Featured</a></li>
             <li><a href="../About/About.html">About</a></li>
         </ul>
         <div class="menu-icon" onclick="toggleMenu()">&#9776;</div>
