--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Featured</title>
     <link rel="stylesheet" href="../style.css">
-    <link rel="icon" type="image/x-icon" href="../Asset/Images/Tittle logo.png">
+    <link rel="icon" type="image/x-icon" href="../Asset/Images/Tittle logo.webp">
 
 </head>
 <body>
@@ -45,9 +45,9 @@
                 </section>
                 <figure style=><a href="../Index\Asset & Environment Modeling.html" class="">
                         <div style-02="" class="transition"><img style-02=""
-                                src="../Asset\Images\Sterling MK4.png"
+                                src="../Asset\Images\Sterling MK4.webp"
                                 class="v-lazy-image v-lazy-image-loaded" sizes="45vw"
-                                srcset="../Asset\Images\Sterling MK4.png">
+                                srcset="../Asset\Images\Sterling MK4.webp">
                         </div>
                     </a></figure>
             </section>
@@ -70,9 +70,9 @@
                 </section>
                 <figure style=><a href="../Index\Asset & Environment Modeling.html" class="">
                         <div style-02="" class="transition"><img style-02=""
-                                src="../Asset\Images\Coffee Maker.jpeg"
+                                src="../Asset\Images\Coffee Maker.webp"
                                 class="v-lazy-image v-lazy-image-loaded" sizes="45vw"
-                                srcset="../Asset\Images\Coffee Maker.jpeg">
+                                srcset="../Asset\Images\Coffee Maker.webp">
                         </div>
                     </a></figure>
             </section>
@@ -94,9 +94,9 @@
                 </section>
                 <figure style=><a href="../Index\Asset & Environment Modeling.html" class="">
                         <div style-02="" class="transition"><img style-02=""
-                                src="../Asset\Images\Happy Robot.png" class="v-lazy-image v-lazy-image-loaded"
+                                src="../Asset\Images\Happy Robot.webp" class="v-lazy-image v-lazy-image-loaded"
                                 sizes="45vw"
-                                srcset="../Asset\Images\Happy Robot.png">
+                                srcset="../Asset\Images\Happy Robot.webp">
                         </div>
                     </a></figure>
             </section>
