--- a/Index/Index.html
+++ b/Index/Index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
     <link rel="stylesheet" href="../Index/Index-style.css">
-    <link rel="icon" type="image/x-icon" href="../Asset/Images/Tittle logo.png">
+    <link rel="icon" type="image/x-icon" href="../Asset/Images/Tittle logo.webp">
 
     <!-- Inter (Alternative to Suisse Int’l) -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
@@ -46,7 +46,7 @@
                             <div style-02  class="style-85">
                                 <a href="../Index/Logo & Brand Identity.html" class="style-86">
                                     <figure class="style-87">
-                                        <img src="../Index\Asset\Images\Index\Logo_Designs.png" sizes="10vw" class="style-88" />
+                                        <img src="../Index\Asset\Images\Index\Logo_Designs.webp" sizes="10vw" class="style-88" />
                                     </figure>
                                     <h4 class="style-89">Logo & Brand Identity</h4>
                                     <small class="style-90">
@@ -57,7 +57,7 @@
                             <div style-02  class="style-92">
                                 <a href="../Index/Marketing Collateral.html" class="style-93">
                                     <figure class="style-94">
-                                        <img src="../Index/Asset/Images/Index/Marketing Collateral.png" sizes="10vw" class="style-95" />
+                                        <img src="../Index/Asset/Images/Index/Marketing Collateral.webp" sizes="10vw" class="style-95" />
                                     </figure>
                                     <h4 class="style-96">Marketing Collateral</h4>
                                     <small class="style-97">
@@ -69,7 +69,7 @@
                     <!--        <div style-02  class="style-92">
                                 <a href="/index/advene" class="style-93">
                                     <figure class="style-94">
-                                        <img src="../Asset\Images\Happy Robot.png" sizes="10vw" class="style-95" />
+                                        <img src="../Asset\Images\Happy Robot.webp" sizes="10vw" class="style-95" />
                                     </figure>
                                     <h4 class="style-96">Social Media Content</h4>
                                     <small class="style-97">
@@ -80,7 +80,7 @@
                             <div style-02  class="style-92">
                                 <a href="/index/advene" class="style-93">
                                     <figure class="style-94">
-                                        <img src="../Asset\Images\Happy Robot.png" sizes="10vw" class="style-95" />
+                                        <img src="../Asset\Images\Happy Robot.webp" sizes="10vw" class="style-95" />
                                     </figure>
                                     <h4 class="style-96">Long-form Editing</h4>
                                     <small class="style-97">
@@ -91,7 +91,7 @@
                             <div style-02  class="style-92">
                                 <a href="../Index/Asset & Environment Modeling.html" class="style-93">
                                     <figure class="style-94">
-                                        <img src="../Index/Asset/Images/Index/Asset & Enivronment Modeling.png" sizes="10vw" class="style-95" />
+                                        <img src="../Index/Asset/Images/Index/Asset & Enivronment Modeling.webp" sizes="10vw" class="style-95" />
                                     </figure>
                                     <h4 class="style-96">Asset & Environment Modeling</h4>
                                     <small class="style-97">
@@ -103,7 +103,7 @@
                             <div style-02  class="style-92">
                                 <a href="../Index/High-Quality Rendering.html" class="style-93">
                                     <figure class="style-94">
-                                        <img src="..//Index/Asset/Images/Index/High-Quality Rendering.png" sizes="10vw" class="style-95" />
+                                        <img src="..//Index/Asset/Images/Index/High-Quality Rendering.webp" sizes="10vw" class="style-95" />
                                     </figure>
                                     <h4 class="style-96">High-Quality Rendering</h4>
                                     <small class="style-97">
@@ -115,7 +115,7 @@
                     <!--        <div style-02  class="style-92">
                                 <a href="/index/advene" class="style-93">
                                     <figure class="style-94">
-                                        <img src="../Asset\Images\Happy Robot.png" sizes="10vw" class="style-95" />
+                                        <img src="../Asset\Images\Happy Robot.webp" sizes="10vw" class="style-95" />
                                     </figure>
                                     <h4 class="style-96">3D Animation</h4>
                                     <small class="style-97">
@@ -127,7 +127,7 @@
                             <div style-02  class="style-92">
                                 <a href="/index/advene" class="style-93">
                                     <figure class="style-94">
-                                        <img src="../Asset\Images\Happy Robot.png" sizes="10vw" class="style-95" />
+                                        <img src="../Asset\Images\Happy Robot.webp" sizes="10vw" class="style-95" />
                                     </figure>
                                     <h4 class="style-96">Web & UI/UX Design</h4>
                                     <small class="style-97">
