--- a/Index/High-Quality Rendering.html
+++ b/Index/High-Quality Rendering.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>High-Quality Rendering</title>
-    <link rel="stylesheet" href="../Index/Asset & Environment Modeling.css">
+    <link rel="stylesheet" href="../Index/High-Quality Rendering.css">
     <link rel="icon" type="image/x-icon" href="../Asset/Images/Tittle logo.webp">
     <!-- Inter (Alternative to Suisse Int’l) -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
