--- a/Index/Index.html
+++ b/Index/Index.html
@@ -29,153 +29,106 @@
     <section class="Featured">
         <section id="Content">
             <section class="scroller fixed" id="MenuScroller"></section>
-            <main style-01="" id="Featured">
-                <section class="style-4">
-                    <section class="style-5"></section>
-                    <main style-02  style-01="" class="Featured">
-                        <section style-02  class="style-54">
-                            <big style-02  class="style-55">
-                                <h1 style-02  class="style-56">Index</h1>
-                        <!--        <button style-02  data-count="23" class="style-57">All</button>
-                                <button style-02  data-count="18" class="style-58">Graphic Design</button>
-                                <button style-02  data-count="13" class="style-59">Video Editing</button>
-                                <button style-02  data-count="13" class="style-60">Animation</button> -->
-                            </big>
-                        </section>
-                        <section style-02  class="style-84">
-                            <div style-02  class="style-85">
-                                <a href="../Index/Logo & Brand Identity.html" class="style-86">
-                                    <figure class="style-87">
-                                        <img src="../Index\Asset\Images\Index\Logo_Designs.webp" sizes="10vw" class="style-88" />
-                                    </figure>
-                                    <h4 class="style-89">Logo & Brand Identity</h4>
-                                    <small class="style-90">
-                                        <p class="style-91">(Custom logos, business cards, brand guides)</p>
-                                    </small>
-                                </a>
-                            </div>
-                            <div style-02  class="style-92">
-                                <a href="../Index/Marketing Collateral.html" class="style-93">
-                                    <figure class="style-94">
-                                        <img src="../Index/Asset/Images/Index/Marketing Collateral.webp" sizes="10vw" class="style-95" />
-                                    </figure>
-                                    <h4 class="style-96">Marketing Collateral</h4>
-                                    <small class="style-97">
-                                        <p class="style-98">(Posters, brochures, flyers, banners, social media posts)
-                                        </p>
-                                    </small>
-                                </a>
-                            </div>
-                    <!--        <div style-02  class="style-92">
-                                <a href="/index/advene" class="style-93">
-                                    <figure class="style-94">
-                                        <img src="../Asset\Images\Happy Robot.webp" sizes="10vw" class="style-95" />
-                                    </figure>
-                                    <h4 class="style-96">Social Media Content</h4>
-                                    <small class="style-97">
-                                        <p class="style-98">(Reels, Shorts, TikToks, ad promos)</p>
-                                    </small>
-                                </a>
-                            </div>
-                            <div style-02  class="style-92">
-                                <a href="/index/advene" class="style-93">
-                                    <figure class="style-94">
-                                        <img src="../Asset\Images\Happy Robot.webp" sizes="10vw" class="style-95" />
-                                    </figure>
-                                    <h4 class="style-96">Long-form Editing</h4>
-                                    <small class="style-97">
-                                        <p class="style-98">(YouTube videos, corporate presentations, documentaries)</p>
-                                    </small>
-                                </a>
-                            </div> -->
-                            <div style-02  class="style-92">
-                                <a href="../Index/Asset & Environment Modeling.html" class="style-93">
-                                    <figure class="style-94">
-                                        <img src="../Index/Asset/Images/Index/Asset & Enivronment Modeling.webp" sizes="10vw" class="style-95" />
-                                    </figure>
-                                    <h4 class="style-96">Asset & Environment Modeling</h4>
-                                    <small class="style-97">
-                                        <p class="style-98">(Product visualization, architecture, props, assets for
-                                            games)</p>
-                                    </small>
-                                </a>
-                            </div>
-                            <div style-02  class="style-92">
-                                <a href="../Index/High-Quality Rendering.html" class="style-93">
-                                    <figure class="style-94">
-                                        <img src="..//Index/Asset/Images/Index/High-Quality Rendering.webp" sizes="10vw" class="style-95" />
-                                    </figure>
-                                    <h4 class="style-96">High-Quality Rendering</h4>
-                                    <small class="style-97">
-                                        <p class="style-98">(Cinematic lighting, realistic textures, product showcases)
-                                        </p>
-                                    </small>
-                                </a>
-                            </div>
-                    <!--        <div style-02  class="style-92">
-                                <a href="/index/advene" class="style-93">
-                                    <figure class="style-94">
-                                        <img src="../Asset\Images\Happy Robot.webp" sizes="10vw" class="style-95" />
-                                    </figure>
-                                    <h4 class="style-96">3D Animation</h4>
-                                    <small class="style-97">
-                                        <p class="style-98">(Character animation, dynamic simulations, animated
-                                            commercials)</p>
-                                    </small>
-                                </a>
-                            </div>
-                            <div style-02  class="style-92">
-                                <a href="/index/advene" class="style-93">
-                                    <figure class="style-94">
-                                        <img src="../Asset\Images\Happy Robot.webp" sizes="10vw" class="style-95" />
-                                    </figure>
-                                    <h4 class="style-96">Web & UI/UX Design</h4>
-                                    <small class="style-97">
-                                        <p class="style-98">(Landing pages, website mockups, app UI designs)</p>
-                                    </small>
-                                </a>
-                            </div> -->
-                        </section>
-                        <footer id="MainFooter">
-                            <div>
-                                <p>For project inquiries and more information, get in touch at <a
-                                        href="https://mail.google.com/mail/?view=cm&fs=1&to=m.sridharam360@gmail.com&su=Subject&body=Your%20message"
-                                        target="M.Sridharan360@gmail.com" title="M.Sridharan360@gmail.com"
-                                        rel="M.Sridharan360@gmail.com">M.Sridharan360@gmail.com</a></p>
-                                <p>Follow on
-                                    <a href="https://www.instagram.com/sridharan_26_" target="_blank"
-                                        title="Instagram@sridharan_26_" rel="noopener noreferrer nofollow">
-                                        Instagram
-                                    </a>
-                                </p>
-                            </div>
-                            <div>
-                                <p>Sridharan – A creative studio crafting exceptional designs, art direction, and CG animation. Explore more.
-                                    <a href="../About/About.html" title="About"
-                                        rel="noopener noreferrer nofollow">
-                                        Read more
-                                    </a>
-                                </p>
-                            </div>
-                        </footer>
-                    </main>
+
+            <main style-01 id="Featured">
+
+                <section class="navigation"><big>
+                        <h1 class="title">Index</h1>
+                    </big></section>
+                <section class="mobile navigation"><big>
+                        <dl>
+                            <dt>
+                                <h1 class="title">Index</h1>
+                            </dt>
+                        </dl>
+                    </big></section>
+                <section class="projects">
+                    <div class="project">
+                        <a href="../Index/Logo & Brand Identity.html">
+                            <figure>
+                                <img src="../Index/Asset/Images/Index/Logo_Designs.webp" sizes="10vw">
+                            </figure>
+                            <h4>Logo & Brand Identity</h4>
+                            <small>
+                                <p>(Custom logos,Business Cards,Brand Guides)</p>
+                            </small>
+                        </a>
+                    </div>
+                    <div class="project">
+                        <a href="../Index/Marketing Collateral.html">
+                            <figure>
+                                <img src ="../Index/Asset/Images/Index/Marketing Collateral.webp" sizes="10vw" alt="">
+                            </figure>
+                            <h4>Marketing Collateral</h4>
+                            <small>
+                                <p>(Posters, brochures, flyers, banners, social media)</p>
+                            </small>
+                        </a>
+                    </div>
+                    <div class="project">
+                        <a href="../Index/High-Quality Rendering.html">
+                            <figure>
+                                <img src="../Index/Asset/Images/Index/High-Quality Rendering.webp" sizes="10vw">
+                            </figure>
+                            <h4>High Quality Rendering</h4>
+                            <small>
+                                <p>(Cinematic lighting, realistic textures, product showcases)</p>
+                            </small>
+                        </a>
+                    </div>
+                    <div class="project">
+                        <a href="../Index/Asset & Environment Modeling.html">
+                            <figure>
+                                <img src="../Index/Asset/Images/Index/Asset & Enivronment Modeling.webp" sizes="10vw">
+                            </figure>
+                            <h4>Asset & Environment Modeling</h4>
+                            <small>
+                                <p>(Product visualization, architecture, props, assets for games)</p>
+                            </small>
+                        </a>
+                    </div>
                 </section>
+
+                <footer id="MainFooter">
+                    <div>
+                        <p>For project inquiries and more information, get in touch at <a
+                                href="https://mail.google.com/mail/?view=cm&fs=1&to=m.sridharam360@gmail.com&su=Subject&body=Your%20message"
+                                target="M.Sridharan360@gmail.com" title="M.Sridharan360@gmail.com"
+                                rel="M.Sridharan360@gmail.com">M.Sridharan360@gmail.com</a></p>
+                        <p>Follow on
+                            <a href="https://www.instagram.com/sridharan_26_" target="_blank"
+                                title="Instagram@sridharan_26_" rel="noopener noreferrer nofollow">
+                                Instagram
+                            </a>
+                        </p>
+                    </div>
+                    <div>
+                        <p>Sridharan – A creative studio crafting exceptional designs, art direction, and CG animation.
+                            Explore more.
+                            <a href="../About/About.html" title="About" rel="noopener noreferrer nofollow">
+                                Read more
+                            </a>
+                        </p>
+                    </div>
+                </footer>
             </main>
         </section>
+        </main>
     </section>
-<script src="../Index\script.js"></script>
-<script>
-  const navbar = document.querySelector('.navbar');
-  const navbarOffset = navbar.offsetTop;
+    </section>
+    <script src="../Index/script.js"></script>
+    <script>
+        const navbar = document.querySelector('.navbar');
+        const navbarOffset = navbar.offsetTop;
 
-  window.addEventListener('scroll', () => {
-    if (window.scrollY > navbarOffset) {
-      navbar.classList.add('sticky'); // Make navbar sticky
-    } else {
-      navbar.classList.remove('sticky'); // Return to normal mode
-    }
-  });
-</script>
+        window.addEventListener('scroll', () => {
+            if (window.scrollY > navbarOffset) {
+                navbar.classList.add('sticky'); // Make navbar sticky
+            } else {
+                navbar.classList.remove('sticky'); // Return to normal mode
+            }
+        });
+    </script>
 </body>
 
 </html>
