--- a/Index/Index.html
+++ b/Index/Index.html
@@ -116,7 +116,7 @@
         </main>
     </section>
     </section>
-    <script src="../Index/script.js"></script>
+    <script src="script.js"></script>
     <script>
         const navbar = document.querySelector('.navbar');
         const navbarOffset = navbar.offsetTop;
