--- a/About/About.html
+++ b/About/About.html
@@ -37,10 +37,7 @@
                             </figure><!---->
                             <div class="page">
                                 <div class="body">
-                                    <p>(Artist) I'm Sridharan, a 3D Artist, Video Editor, and Graphic Designer specializing in 3D Visualization
-                                        - encompassing modeling, texturing, lighting, rendering and animation, With a keen eye
-                                        for detail and compoaition, I craft high-Quality visual for product desgin, branding, and digital media, delivering impactful and
-                                        immersive creative solution, Let's bring ideas to life.</p>
+                                    <p>I’m Sridharan, a 3D Artist, Video Editor, and Graphic Designer specializing in 3D Visualization — including modeling, texturing, lighting, rendering, and animation. With a keen eye for detail and composition, I craft high-quality visuals for product design, branding, and digital media. I deliver impactful, immersive creative solutions that bring ideas to life. Let’s collaborate and turn your vision into reality.</p>
                                 </div>
                                 <footer>
                                     <section>
